--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deploy Blazor WASM to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch: {}
+    branches: [ "main" ]
+  workflow_dispatch: { }
 
 permissions:
   contents: write
@@ -22,17 +22,18 @@ jobs:
         with:
           dotnet-version: 8.0.x
 
-      - name: Publish project
-        run: dotnet publish -c Release -o release
+    - name: Publish project
+      run: dotnet publish X00194620_Ca3/X00194620_Ca3.csproj -c Release -o release
 
-      - name: Change base-href
-        run: |
-          sed -i 's|<base href="/" />|<base href="/${{ github.event.repository.name }}/" />|' release/wwwroot/index.html
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: release/wwwroot
+        - name: Change base-href
+          run: |
+            sed -i 's|<base href="/" />|<base href="/${{ github.event.repository.name }}/" />|' release/wwwroot/index.html
+
+        - name: Upload artifact
+          uses: actions/upload-pages-artifact@v3
+          with:
+            path: release/wwwroot
 
   deploy:
     needs: build
